--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,29 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+a {
+  color: #1c2e4e;
+  text-decoration: none;
 }
 body {
-  background-color: #b7baaf;
+  background-color: #ffffff;
+}
+.loader {
+  align-self: center;
+  justify-self: center;
+  color: #1c2e4e;
+  animation: loader 0.4s ease-out 0s infinite;
+  margin-top: 50px;
+}
+@keyframes loader {
+  form {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 .i {
   color: white;
@@ -26,27 +45,35 @@ body {
   top: 0;
   width: 100%;
   z-index: 2;
+  border-bottom: 1px solid #1c2e4e;
 }
 .nav ul {
-  display: flex;
   justify-content: space-between;
   list-style: none;
   width: 300px;
   font-weight: bolder;
+  display: none;
 }
 .nav button {
   padding: 5px;
   width: 100px;
   font-weight: 500;
   border-radius: 40px;
-  border: none;
+  border: 1px solid #fa163c;
   color: white;
-  background-color: rgb(250, 22, 60);
+  cursor: pointer;
+  transition: background-color 500ms;
+  background-color: #fa163c;
+}
+.nav button:hover {
+  color: black;
+  background-color: #ffffff;
 }
 
 /*header*/
 .header {
-  height: 550px;
+  padding-top: 80px;
+  padding-bottom: 80px;
   background: #1c2e4e;
   display: flex;
   align-items: center;
@@ -63,72 +90,107 @@ body {
   width: 150px;
   font-weight: 500;
   border-radius: 40px;
-  border: none;
+  border: 1px solid #fa163c;
   color: white;
-  background-color: rgb(250, 22, 60);
+  cursor: pointer;
+  transition: background-color 500ms;
+  background-color: #fa163c;
+}
+.header button:hover {
+  color: black;
+  background-color: #ffffff;
 }
 .header div {
-  width: 35%;
-  height: 300px;
-  position: relative;
-  margin-top: 20px;
+  width: 95%;
+}
+.header section {
+  width: 95%;
+  align-self: flex-start;
+  display: none;
+  height: 400px;
 }
 .img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 400px;
-  z-index: 1;
-  border: 4px solid grey;
+  width: 100%;
+  height: 100%;
 }
-.img2 {
-  position: absolute;
-  width: 300px;
-  top: 100px;
-  left: 200px;
+.img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /*first section*/
 
 .first-section {
-  height: 400px;
+  height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-weight: 500;
-  font-size: larger;
+  font-size: 16px;
   color: #1c2e4e;
+  background-color: #ffffff;
 }
 .first-section p {
-  width: 70%;
+  width: 95%;
 }
 .first-section button {
   padding: 10px;
   width: 150px;
   font-weight: 500;
   border-radius: 40px;
-  border: none;
+  border: 1px solid #fa163c;
   color: white;
-  background-color: rgb(250, 22, 60);
+  cursor: pointer;
+  transition: background-color 0.5s;
+  background-color: #fa163c;
+}
+.first-section button:hover {
+  color: black;
+  background-color: #ffffff;
 }
 
 /*second section*/
 .second-section {
-  padding: 20px;
-  text-align: center;
-  font-size: larger;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: white;
   background-color: #1c2e4e;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
-.pricing {
+.admin {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  max-width: 1200px;
 }
-.pricing div {
-  background-color: #b7baaf;
-  width: 25%;
+.admin span {
+  width: 95%;
+}
+.admin img {
+  width: 100%;
+  object-fit: contain;
+}
+.admin div {
+  width: 95%;
+}
+/* third section*/
+.third-section {
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #1c2e4e;
+  background-color: #eeecec;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 /*login page*/
@@ -146,15 +208,22 @@ body {
   align-items: center;
   justify-content: space-evenly;
   background-color: #b7baaf;
-  width: 30%;
-  padding: 10px;
+  width: 95%;
+  padding: 15px;
   border-radius: 5px;
   color: #1c2e4e;
+}
+.login label {
+  align-self: self-start;
+  margin-left: 5px;
+  margin-bottom: 5px;
+  font-weight: 600;
 }
 .login input {
   padding: 15px;
   border: none;
   width: 100%;
+  border-radius: 10px;
 }
 .login select {
   padding: 15px;
@@ -179,7 +248,12 @@ body {
   border-radius: 40px;
   border: none;
   color: white;
-  background-color: rgb(250, 22, 60);
+  background-color: #fa163c;
+}
+.login div {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
 /*dashboard*/
@@ -209,18 +283,24 @@ body {
 .dashboard-nav p {
   margin-top: 12px;
   margin-left: 5px;
+  display: none;
+}
+.dashboard-nav h1 {
+  display: none;
 }
 .side-bar {
   background-color: #16243b;
   height: 100vh;
-  min-width: 20%;
+  min-width: 100%;
   top: 0;
   position: sticky;
   padding-top: 75px;
   z-index: 1;
+  display: none;
 }
 .side-bar li {
   list-style: none;
+  cursor: pointer;
   color: white;
   font-size: 15px;
   width: 100%;
@@ -254,7 +334,13 @@ body {
 
 .body {
   padding: 10px;
-  width: 80%;
+  margin-top: 15px;
+  background-color: #b7baaf;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 .course-con::-webkit-scrollbar {
   background-color: #28354d65;
@@ -269,7 +355,7 @@ body {
 }
 .course-con {
   display: flex;
-  margin-top: 60px;
+  margin-top: 50px;
   overflow-x: scroll;
 }
 .course span {
@@ -278,7 +364,7 @@ body {
 .course {
   color: #1c2e4e;
   background-color: #ffffff;
-  min-width: 20vw;
+  min-width: 250px;
   height: 100px;
   display: flex;
   justify-content: center;
@@ -288,24 +374,45 @@ body {
 }
 .list {
   margin-top: 30px;
-  margin-left: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 98%;
+  width: 100%;
   border-radius: 10px 10px 0 0;
 }
-.list ul {
+.list-ul {
   display: flex;
-  list-style: none;
+  flex-direction: column;
   width: 100%;
-  height: 55px;
+  min-height: 50px;
   justify-content: space-around;
   align-items: center;
-  border-bottom: 0.5px solid #1c2e4e;
+  border-bottom: 1px solid lightgrey;
+  font-weight: bolder;
+  margin-bottom: 10px;
+  position: relative;
+}
+.list span {
+  width: 50%;
+  text-align: start;
+}
+.list td {
+  text-align: center;
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: 55px;
+  width: 100%;
+  padding: 10px;
+}
+.list td::before {
+  content: attr(data-label);
+  position: absolute;
+  left: 5px;
   font-weight: bolder;
 }
-.list li {
+.list th {
   text-align: center;
   width: 25%;
 }
@@ -313,10 +420,16 @@ body {
   background-color: #eeecec;
 }
 .list-header {
-  background-color: #1c2e4e;
+  display: none;
+  background-color: #16243b;
   color: #ffffff;
   border-radius: 5px 5px 0 0;
+  justify-content: space-between;
   padding: 10px;
+  width: 100%;
+  padding: 10px;
+  min-height: 55px;
+  align-items: center;
 }
 .list-ul {
   color: #16243b;
@@ -324,24 +437,25 @@ body {
 }
 .list-ul button {
   padding: 5px;
-  background-color: #1c2e4e;
+  background-color: #fa163c;
   color: #ffffff;
   border: none;
   font-size: 15px;
   margin-left: 10px;
   width: 100px;
+  transition: background-color 600ms;
 }
 .list-ul button:hover {
   background-color: #ffffff;
   color: #1c2e4e;
-  border: 2px solid #1c2e4e;
-  padding: 3px;
+  border: 1px solid #1c2e4e;
+  padding: 4px;
 }
 
 /*assignment section*/
 
 .asign-con {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   display: flex;
@@ -355,7 +469,7 @@ body {
 .asign {
   background-color: #ffffff;
   padding: 15px;
-  width: 80vw;
+  width: 90vw;
   color: #1c2e4e;
 }
 .asign form {
@@ -378,9 +492,16 @@ body {
 }
 .asign button {
   padding: 10px;
-  border: none;
+  border: 1px solid #fa163c;
   color: #ffffff;
-  background-color: #1c2e4e;
+  background-color: #fa163c;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 500ms;
+}
+.asign button:hover {
+  color: black;
+  background-color: #ffffff;
 }
 .assignment-box {
   position: absolute;
@@ -388,7 +509,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: #28354d65;
+  background-color: #28354daf;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -400,9 +521,13 @@ body {
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   color: #28354d;
+}
+.assignment-box section {
+  width: 100%;
+  padding: 5px;
 }
 .assignment-box h2 {
   width: 100%;
@@ -422,8 +547,146 @@ body {
   padding: 10px;
 }
 .assignment-box button {
-  padding: 5px;
-  background-color: #28354d;
-  border: none;
+  padding: 10px;
+  background-color: #fa163c;
+  cursor: pointer;
   color: #ffffff;
+  border: 1px solid #fa163c;
+  font-weight: 600;
+  transition: background-color 500ms;
+}
+.assignment-box button:hover {
+  background-color: #ffffff;
+  color: black;
+}
+/*all complain*/
+.complain-con {
+  width: 100%;
+  background-color: #b7baaf;
+}
+.all-complain {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.all-complain div {
+  background-color: #ffffff;
+  padding: 10px;
+  width: 100%;
+  margin-top: 5px;
+}
+.all-complain h3 {
+  display: flex;
+  align-items: center;
+}
+.all-complain span {
+  margin-left: 5px;
+}
+.all-complain p {
+  padding: 5px;
+}
+.all-complain section {
+  font-size: smaller;
+  border: 1px solid lightgrey;
+  border-radius: 0px;
+  padding: 5px;
+}
+.assignment-slice {
+  background-color: #ffffff;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+.assignment-slice small {
+  margin-left: 5px;
+}
+.assignment-slice h3 {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+/*Notification*/
+.notification div {
+  background-color: #ffffff;
+  padding: 15px;
+  margin-top: 5px;
+  box-shadow: 2px 2px 5px #484f5c;
+}
+
+@media (min-width: 780px) {
+  .body {
+    width: 80%;
+  }
+  .nav ul {
+    display: flex;
+  }
+  .header {
+    flex-direction: row;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    height: 600px;
+    align-items: center;
+  }
+  .header div {
+    width: 35%;
+  }
+  .header section {
+    width: 35%;
+    display: block;
+  }
+
+  .first-section p {
+    width: 70%;
+  }
+  .admin div {
+    width: 40%;
+  }
+  .admin span {
+    width: 40%;
+  }
+  .admin {
+    flex-direction: row;
+    margin-top: 40px;
+  }
+  .dashboard-nav h1 {
+    display: block;
+  }
+  .dashboard-nav h2 {
+    display: none;
+  }
+  .dashboard-nav p {
+    display: block;
+  }
+  .list-ul {
+    flex-direction: row;
+    margin-bottom: 0;
+    padding: 10px;
+  }
+  .list td {
+    border-bottom: none;
+    justify-content: center;
+  }
+  .list span {
+    text-align: center;
+    width: 100%;
+  }
+  .list td::before {
+    display: none;
+  }
+  .side-bar {
+    display: block;
+    min-width: 20%;
+  }
+  .list-header {
+    display: flex;
+  }
+  .login form {
+    width: 30%;
+  }
+  .asign {
+    width: 70vw;
+  }
 }
